--- a/docs/styles/stylesheet.css
+++ b/docs/styles/stylesheet.css
@@ -151,17 +151,15 @@ input:checked+.slider:before {
 table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 80%;
+  width: 75%;
   margin: auto;
   font-size: 18px;
   margin-top: 3%;
 }
 
 td {
-  border: 1px solid #000000;
   padding: 5px;
-}
-
-.table-item {
-  background-color: #ddf9f9;
+  text-align: left;
+  width: 50%;
+  vertical-align: top;
 }
